--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .birthday-title {
   font-family: 'Lobster', cursive;
   font-size: 56pt;
-  color: #ffd700; /* Gold */
+  color: #000000;
   text-align: center;
   letter-spacing: 2px;
   text-shadow: 0 2px 10px #b794f4, 0 1px 0 #fff;
